Small fixes, /project button now works on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -124,7 +124,7 @@ p {
   text-decoration: none;
 }
 #main h2.header {
-  margin: 140px 0 120px 0;
+  margin: 130px 0 130px 0;
   text-align: center;
   color: #000000;
   font-family: Oswald;
@@ -179,10 +179,17 @@ p {
 }
 @media screen and (min-width: 600px) {
   #main h2.header {
-    margin: 200px 0 200px 0;
+    margin: 200px 0 220px 0;
   }
   #main h2.header p:nth-of-type(1) {
     font-size: 3.05em;
+  }
+  #main h2.header p:nth-of-type(2),
+  #main h2.header p:nth-of-type(3) {
+    font-size: 0.9em;
+  }
+  #main h2.header p:nth-of-type(4) {
+    font-size: 0.35em;
   }
 }
 @media screen and (min-width: 1100px) {
