--- a/static/less/main.less
+++ b/static/less/main.less
@@ -13,7 +13,7 @@
 	}
 
 	h2.header {
-		margin: 140px 0 120px 0;
+		margin: 130px 0 130px 0;
 
 		text-align: center;
 		color: lighten(black, 0%);
@@ -74,9 +74,17 @@
 		}
 
 		@media screen and (min-width: 600px) {
-			margin: 200px 0 200px 0;
+			margin: 200px 0 220px 0;
 			p:nth-of-type(1) {
 				font-size: 3.05em;
+			}
+
+			p:nth-of-type(2), p:nth-of-type(3) {
+				font-size: 0.9em;
+			}
+
+			p:nth-of-type(4) {
+				font-size: 0.35em;
 			}
 		}
 
